--- a/.github/workflows/orca-iac-gh-actions.yml
+++ b/.github/workflows/orca-iac-gh-actions.yml
@@ -21,7 +21,7 @@ permissions:
   actions: read
   contents: read
   checks: write
-  issues: writeס;
+  issues: write
   pull-requests: write
   security-events: write
   statuses: write
