--- a/.github/workflows/orca-iac-gh-actions.yml
+++ b/.github/workflows/orca-iac-gh-actions.yml
@@ -1,7 +1,7 @@
 name: Sample Orca IaC Scan Workflow
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "single_file" ]
     paths:
       - '**.tf'
       - '**.json'
@@ -9,7 +9,7 @@ on:
       - '**.yaml'
       
   pull_request:
-    #branches: [ "main" ]
+    branches: [ "main" ]
     paths:
       - '**.tf'
       - '**.json'
